Closed Bug 1898684 Opened 2 years ago Closed 2 years ago

MOZ_CRASH(Why is someone touching JSAPI without an AutoJSAPI?) with AudioWorklet and WebAssembly

Categories

(Core :: DOM: Core & HTML, defect)

Unspecified
All
defect

Tracking

()

RESOLVED FIXED
128 Branch
Tracking Status
firefox-esr115 --- wontfix
firefox127 --- wontfix
firefox128 --- fixed

People

(Reporter: karlt, Assigned: karlt)

References

Details

(Keywords: crash)

Crash Data

Attachments

(1 file)

Crash report: https://crash-stats.mozilla.org/report/index/bbc8d028-0cc7-47e4-beda-649cd0240523

MOZ_CRASH Reason: MOZ_CRASH(Why is someone touching JSAPI without an AutoJSAPI?)

Top 10 frames:

0  xul.dll  MozCrashWarningReporter(JSContext*, JSErrorReport*)  xpcom/base/CycleCollectedJSRuntime.cpp:475
1  xul.dll  js::CallWarningReporter(JSContext*, JSErrorReport*)  js/src/vm/ErrorReporting.cpp:36
1  xul.dll  ReportError(JSContext*, JSErrorReport*, JSErrorFormatString const* (*)(void*,...  js/src/vm/ErrorReporting.cpp:167
1  xul.dll  js::ReportErrorNumberVA(JSContext*, js::IsWarning, JSErrorFormatString const*...  js/src/vm/ErrorReporting.cpp:492
2  xul.dll  js::WarnNumberASCII(JSContext*, const unsigned int, <NoType>)  js/src/vm/Warnings.cpp:74
3  xul.dll  CreateSpecificWasmBuffer(JSContext*, js::wasm::MemoryDesc const&)  js/src/vm/ArrayBufferObject.cpp:1260
3  xul.dll  js::CreateWasmBuffer(JSContext*, js::wasm::MemoryDesc const&)  js/src/vm/ArrayBufferObject.cpp:1363
4  xul.dll  js::wasm::Module::instantiateMemories(JSContext*, JS::GCVector<js::WasmMemory...  js/src/wasm/WasmModule.cpp:599
5  xul.dll  js::wasm::Module::instantiate(JSContext*, js::wasm::ImportValues&, JS::Handle...  js/src/wasm/WasmModule.cpp:978
6  xul.dll  AsyncInstantiateTask::resolve(JSContext*, JS::Handle<js::PromiseObject*>)  js/src/wasm/WasmJS.cpp:4388

A similar issue is reproducible with ./mach mochitest dom/worklet/tests/test_promise.html when "javascript.options.wasm_verbose" is set.
https://pernos.co/debug/vGB4wFsxJrZx6flMNgQiWQ/index.html

Severity: -- → S3
Pushed by ktomlinson@mozilla.com: https://hg.mozilla.org/integration/autoland/rev/ce3232cae7bd Use AutoJSAPI while run()ing JS::Dispatchable r=dom-core,peterv
Regressions: 1900519
Status: ASSIGNED → RESOLVED
Closed: 2 years ago
Resolution: --- → FIXED
Target Milestone: --- → 128 Branch
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: