Bug 1898684 Use AutoJSAPI while run()ing JS::Dispatchable r=dom-core,peterv

Differential Revision: https://phabricator.services.mozilla.com/D211516